--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "prettier": "^1.18.2",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.3.0",
-    "sqlite3": "^5.1.6",
+    "@vscode/sqlite3": "^4.0.11",
     "uuid": "^3.3.3"
   },
   "peerDependencies": {
