--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^3.0.5",
     "jsdoc": "^3.6.3",
-    "knex": "^1.0.7",
+    "knex": "^2.4.2",
     "lint-staged": "^9.2.5",
     "mocha": "^7.1.2",
     "mysql": "^2.18.1",
@@ -58,7 +58,7 @@
     "prettier": "^1.18.2",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.3.0",
-    "@vscode/sqlite3": "^4.0.11",
+    "sqlite3": "^5.1.6",
     "uuid": "^3.3.3"
   },
   "peerDependencies": {
